[tool.poetry]
name = "asjs"
version = "0.1.1"
description = "Python module for implement object with syntax from JavaScript"
authors = ["Alexander Podstrechnyy <tankalxat34@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tankalxat34/asjs"
keywords = ["js", "javascript", "datatype"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
